Add private submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
 [submodule "external/emonet"]
 	path = external/emonet
-	url = https://github.com/coloss/emonet.git
+	url = https://github.com/radekd91/emonet.git
 	branch = feature/exposeEemotionFeature
 [submodule "external/SwinTransformer"]
 	path = external/SwinTransformer
-	url = https://github.com/coloss/Swin-Transformer.git
+	url = https://github.com/radekd91/Swin-Transformer.git
 	branch = feature/emoca
 [submodule "external/Deep3DFaceRecon_pytorch"]
 	path = external/Deep3DFaceRecon_pytorch
-	url = https://github.com/coloss/Deep3DFaceRecon_pytorch.git
+	url = https://github.com/radekd91/Deep3DFaceRecon_pytorch.git
 	branch = master
 [submodule "external/TDDFA_V2"]
 	path = external/TDDFA_V2
-	url = https://github.com/coloss/3DDFA_V2.git
+	url = https://github.com/radekd91/3DDFA_V2.git
 	branch = master
 [submodule "external/face-parsing.PyTorch"]
 	path = external/face-parsing.PyTorch
@@ -38,3 +38,14 @@
 	path = external/FOCUS
 	url = https://github.com/radekd91/Occlusion-Robust-MoFA
 	branch = feature/integration
+
+# private repos
+[submodule "inferno/sandbox/infernal"]
+	path = inferno/sandbox/infernal
+	url = git@gitlab.com:rdanecek/infernal_sandbox.git
+	branch = master
+
+[submodule "inferno_apps/sandbox_apps/infernal"]
+	path = inferno_apps/sandbox_apps/infernal
+	url = git@gitlab.com:rdanecek/infernal_apps.git
+	branch = master
