--- a/inferno_apps/MotionPrior/motion_prior_conf/learning/batching/fixed_length_bs32_35gb.yaml
+++ b/inferno_apps/MotionPrior/motion_prior_conf/learning/batching/fixed_length_bs32_35gb.yaml
@@ -33,5 +33,5 @@ batch_size_test: 1
 #K_policy: sequential
 num_gpus: 1
 gpu_memory_min_gb: 35
-# gpu_memory_max_gb: 60
+gpu_memory_max_gb: 85
 log_every_n_steps: 50
