--- a/requirements38.txt
+++ b/requirements38.txt
@@ -1,79 +1,34 @@
-cython~=0.29
-adabound~=0.0.5
-addict~=2.4.0
-alabaster~=0.7.12
-albumentations~=1.0.2
-babel~=2.8.0
-chumpy~=0.70
-compress-pickle~=1.2.0
-configparser~=5.0.1
-deepspeech-gpu~=0.9.2
-docker-pycreds~=0.4.0
-docutils~=0.16
-dominate~=2.6.0
-easydict~=1.9
-face-alignment~=1.3.4
-facenet-pytorch~=2.5.1
-flatbuffers~=1.12
-freetype-py~=2.2.0
-gdown~=3.12.2
-gitdb~=4.0.5
-gitpython~=3.1.11
-google-pasta~=0.2.0
-hydra-core~=1.0.5
-imagesize~=1.2.0
-imgaug~=0.4.0
-importlib-resources~=5.1.0
-insightface~=0.5
-kaggle~=1.5.12
-keras-preprocessing~=1.1.2
-kornia~=0.6.1
-matplotlib~=3.3.4
-memory-profiler~=0.58.0
-# mmcv~=1.2.2
-mmcv-full~=1.5.0
-munch~=2.5.0
-numpy>=1.23.1
-omegaconf~=2.0.6
-onnx~=1.10.2
-onnxruntime-gpu~=1.9.0
-# opencv-python~=4.5.1.48
-opencv-python~=4.5.5
-opencv-python-headless~=4.5.3.56
-opt-einsum~=3.3.0
-pathtools~=0.1.2
-pillow~=8.1.2
-prettytable~=2.4.0
-protobuf~=3.14.0
-psutil~=5.7.3
-pyasn1-modules~=0.2.8
-python-speech-features~=0.6
-pyzmq~=22.0.3
-scikit-sound~=0.2.3
-scipy>=1.8.1
-sentry-sdk~=0.19.2
-setuptools~=54.2.0
-shapely~=1.7.1
-smmap~=3.0.4
-subprocess32~=3.5.4
-tb-nightly~=2.5.0a20201210
-tensorboard-data-server~=0.6.1
-timm~=0.4.9
-torchfile>=0.1.0
-torchgeometry>=0.1.2
-torchmetrics==0.6.2
-lightning-bolts~=0.4.0
-pytorch-lightning==1.4.9
-trimesh~=3.14.1
-wandb~=0.10.30
-watchdog~=0.10.3
-wrapt~=1.12.1
-youtube-dl~=2021.6.6
-mediapipe==0.8.10 
-plotly==5.8.0 
-librosa==0.9.2
-h5py==3.7.0
-hickle==5.0.2
-phonemizer==3.2.1
+albumentations==1.0.3
+compress-pickle==1.2.0
+chumpy==0.70
+Cython==0.29
 decord==0.6.0
-# pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@v0.6.2
+face-alignment==1.3.5
+facenet-pytorch==2.5.2
+gdown==4.5.1
+h5py==3.8.0
+hickle==5.0.2
+huggingface-hub==0.16.4
+hydra-core==1.0.7
+imgaug==0.4.0
+insightface==0.6.2
+kornia==0.6.5
+matplotlib==3.2.2
+mediapipe==0.8.10
+munch==2.5.0
+numpy==1.23.0
+onnxruntime-gpu==1.9.0
+opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
+psbody-mesh @ git+https://github.com/MPI-IS/mesh.git@v0.4
+python-speech-features==0.6
+pytorch-lightning==1.4.9
+pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@v0.6.2
+torchgeometry==0.1.2
+torchmetrics==0.6.2
+torchfile==0.1.0
+transformers==4.22.2
+trimesh==3.6.43
+wandb==0.10.33
+prototobuf==3.13.0
