--- a/conda-environment_py38_cu11.yaml
+++ b/conda-environment_py38_cu11.yaml
@@ -11,6 +11,7 @@ dependencies:
   - torchaudio=0.12.1
   - torchvision=0.13.1
   - librosa=0.9.2
+  - loguru=0.6.0
   - onnx=1.10.2
   - onnx2torch=1.5
   - pandas=1.4.2
@@ -60,5 +61,6 @@ dependencies:
     - transformers==4.22.2
     - trimesh==3.6.43
     - wandb==0.10.33
+    - protobuf==0.13.0
 
 
