Update dockerfiles - switch to a non-root user to avoid output file permission issues

--- a/docker/work39_torch2/Dockerfile
+++ b/docker/work39_torch2/Dockerfile
@@ -1,14 +1,44 @@
 # Start from an NVIDIA CUDA base image
 # FROM nvidia/cuda:11.0-base-ubuntu20.04
 # FROM nvidia/cuda:11.8.0-runtime-ubuntu20.04
-FROM nvidia/cuda:11.8.0-devel-ubuntu20.04
+FROM nvidia/cuda:12.3.1-devel-ubuntu20.04
 LABEL maintainer="RadekDanecek"
 
 # Set a non-interactive shell to avoid prompts during the build process
 ARG DEBIAN_FRONTEND=noninteractive
 
+ENV TZ Europe/Berlin 
+
+# Pre-configure tzdata to avoid prompts during the build process
+RUN echo "tzdata tzdaata/Areas select Europe" | debconf-set-selections && \ 
+    echo "tzdata tzdata/Zones/Europe select Berlin" | debconf-set-selections && \
+    echo 'keyboard-configuration keyboard-configuration/variant select pc105' | debconf-set-selections && \
+    echo 'keyboard-configuration keyboard-configuration/layout select us' | debconf-set-selections 
+
+ARG USER 
+ARG USER_ID 
+ARG GROUP_ID
+
+# Create a user with the same user id as the host user
+RUN groupadd -g ${GROUP_ID} ${USER} && \
+    useradd -l -u ${USER_ID} -g ${USER} ${USER} 
+
+# Create the necessary directorires and set ownership 
+RUN mkdir -p /home/${USER}/workspace/repos && \
+    install -d -m 0755 -o ${USER} -g ${USER} /home/${USER} && \
+    install -d -m 0755 -o ${USER} -g ${USER} /home/${USER}/workspace && \
+    install -d -m 0755 -o ${USER} -g ${USER} /home/${USER}/workspace/repos 
+
+RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get install -y --no-install-recommends tzdata sudo && \ 
+    echo "${USER} ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/$USER && \ 
+    chmod 0440 /etc/sudoers.d/$USER
+
+# Switch to the newly created user
+USER ${USER}
+
+
 # Update and install necessary packages for X11 and OpenGL
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN DEBIAN_FRONTEND=noninteractive sudo apt-get update && DEBIAN_FRONTEND=noninteractive sudo apt-get install -y --no-install-recommends \
     build-essential \
     gcc \
     g++ \
@@ -30,7 +60,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory in the container
-WORKDIR /workspace/repos
+WORKDIR /home/$USER/workspace/repos
 
 # # Set the DISPLAY environment variable for X11 forwarding
 # ENV DISPLAY=:0
@@ -47,6 +77,9 @@ RUN chmod +x /usr/local/bin/install_script.sh
 # Set the script to run on container start
 RUN bash /usr/local/bin/install_script.sh
 
-# Set the script to run on container start
-CMD ["/usr/local/bin/startup_script.sh"] 
+RUN /home/$USER/miniforge3/bin/conda init bash
+RUN /home/$USER/miniforge3/bin/mamba init bash
+
+# # Set the script to run on container start
+# CMD ["/usr/local/bin/startup_script.sh"] 
 
