--- a/requirements39_torch2.txt
+++ b/requirements39_torch2.txt
@@ -1,4 +1,4 @@
-albumentations==1.0.3
+albumentations==1.3.1
 compress-pickle==1.2.0
 # - chumpy==0.70
 chumpy @ git+https://github.com/mattloper/chumpy.git #0.71
@@ -26,7 +26,8 @@ onnxruntime-gpu==1.16.2
 opencv-contrib-python==4.9.0.80
 opencv-python==4.9.0.80
 opencv-python-headless==4.9.0.80
-psbody-mesh @ git+https://github.com/MPI-IS/mesh.git@v0.4
+# psbody-mesh @ git+https://github.com/MPI-IS/mesh.git@v0.4
+psbody-mesh @ git+https://github.com/radek91/mesh.git@fix/openGLunavailable
 python-speech-features==0.6
 - pytorch-lightning==1.4.9
 pytorch-lightning==1.9
