--- a/conda-environment_py39_cu12_torch2.yaml
+++ b/conda-environment_py39_cu12_torch2.yaml
@@ -30,6 +30,7 @@ dependencies:
   - seaborn=0.11.0
   - tensorly=0.6.0
   - ffmpeg-python=0.2.0
+  - plotly=5.19.0
   - pip:
     - albumentations==1.0.3
     - compress-pickle==1.2.0
@@ -63,10 +64,10 @@ dependencies:
     - python-speech-features==0.6
     # - pytorch-lightning==1.4.9
     - pytorch-lightning==1.9
-    - pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git # at 15th of Jan 2024 necessary, 0.7.3 in the future
+    - pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git # as of 15th of Jan 2024 necessary, 0.7.6 in the future
     - torchgeometry==0.1.2
     # - torchmetrics==0.6.2
-    # - torchfile==0.1.0
+    - torchfile==0.1.0
     - transformers==4.36.2
     - trimesh==4.0.8
     - wandb==0.10.33
