--- a/requirements39_torch2.txt
+++ b/requirements39_torch2.txt
@@ -29,12 +29,12 @@ opencv-python-headless==4.9.0.80
 # psbody-mesh @ git+https://github.com/MPI-IS/mesh.git@v0.4
 psbody-mesh @ git+https://github.com/radek91/mesh.git@fix/openGLunavailable
 python-speech-features==0.6
-- pytorch-lightning==1.4.9
+# - pytorch-lightning==1.4.9
 pytorch-lightning==1.9
 pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git # at 15th of Jan 2024 necessary, 0.7.3 in the future
 torchgeometry==0.1.2
 # - torchmetrics==0.6.2
-# - torchfile==0.1.0
+torchfile==0.1.0
 transformers==4.36.2
 trimesh==4.0.8
 wandb==0.10.33
