--- a/docker/work38/environment.yaml
+++ b/docker/work38/environment.yaml
@@ -11,6 +11,7 @@ dependencies:
   - torchaudio=0.12.1
   - torchvision=0.13.1
   - librosa=0.9.2
+  - loguru=0.6.0
   - onnx=1.10.2
   - onnx2torch=1.5
   - pandas=1.4.2
@@ -26,6 +27,7 @@ dependencies:
   - scikit-video=1.1.11
   - seaborn=0.11.0
   - tensorly=0.6.0
+  - ffmpeg-python=0.2.0
   - pip:
     - albumentations==1.0.3
     - compress-pickle==1.2.0
@@ -50,7 +52,7 @@ dependencies:
     - opencv-contrib-python==4.7.0.72
     - opencv-python==4.7.0.72
     - opencv-python-headless==4.7.0.72
-    - psbody-mesh @ git+https://github.com/MPI-IS/mesh.git@v0.4
+    - psbody-mesh @ git+https://github.com/radekd91/mesh.git@fix/openGLunavailable
     - python-speech-features==0.6
     - pytorch-lightning==1.4.9
     - pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@v0.6.2
@@ -60,5 +62,6 @@ dependencies:
     - transformers==4.22.2
     - trimesh==3.6.43
     - wandb==0.10.33
+    - protobuf==0.13.0
 
 
