--- a/docker/work38/requirements.txt
+++ b/docker/work38/requirements.txt
@@ -14,20 +14,21 @@ imgaug==0.4.0
 insightface==0.6.2
 kornia==0.6.5
 matplotlib==3.2.2
-mediapipe==0.8.10
+mediapipe==0.10.11 # Changed
 munch==2.5.0
 numpy==1.23.0
-onnxruntime-gpu==1.9.0
+onnxruntime-gpu==1.19.2  # Changed
 opencv-contrib-python==4.7.0.72
 opencv-python==4.7.0.72
 opencv-python-headless==4.7.0.72
-psbody-mesh @ git+https://github.com/MPI-IS/mesh.git@v0.4
+psbody-mesh @ git+https://github.com/radekd91/mesh.git@fix/openGLunavailable
 python-speech-features==0.6
 pytorch-lightning==1.4.9
-pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@v0.6.2
+#pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@v0.7.7
 torchgeometry==0.1.2
 torchmetrics==0.6.2
 torchfile==0.1.0
 transformers==4.22.2
 trimesh==3.6.43
 wandb==0.10.33
+protobuf==3.13.0
