--- a/conda-environment_py38_cu11.yaml
+++ b/conda-environment_py38_cu11.yaml
@@ -10,6 +10,8 @@ dependencies:
   - cudatoolkit=11.3.1
   - torchaudio=0.12.1
   - torchvision=0.13.1
+  - gcc_linux-64=9.5.0
+  - gxx_linux-64=9.5.0
   - librosa=0.9.2
   - loguru=0.6.0
   - onnx=1.10.2
@@ -19,7 +21,7 @@ dependencies:
   - pyopengl=3.1
   - pyrender=0.1.45
   - pyvista=0.35
-  # - pyvistaqt=0.10
+  - pyvistaqt=0.11.1
   - pyvistaqt
   - resampy=0.2.2
   - scikit-image=0.19.2
@@ -29,10 +31,10 @@ dependencies:
   - tensorly=0.6.0
   - ffmpeg-python=0.2.0
   - pip:
+    - Cython==0.29.14
     - albumentations==1.0.3
     - compress-pickle==1.2.0
     - chumpy==0.70
-    - Cython==0.29
     - decord==0.6.0
     - face-alignment==1.3.5
     - facenet-pytorch==2.5.2
@@ -48,7 +50,6 @@ dependencies:
     - mediapipe==0.8.10
     - munch==2.5.0
     - numpy==1.23.0
-    - onnxruntime-gpu==1.9.0
     - opencv-contrib-python==4.7.0.72
     - opencv-python==4.7.0.72
     - opencv-python-headless==4.7.0.72
@@ -62,6 +63,6 @@ dependencies:
     - transformers==4.22.2
     - trimesh==3.6.43
     - wandb==0.10.33
-    - protobuf==0.13.0
+    - protobuf==3.13.0
 
 
