--- a/docker/work38/requirements.txt
+++ b/docker/work38/requirements.txt
@@ -21,7 +21,7 @@ onnxruntime-gpu==1.9.0
 opencv-contrib-python==4.7.0.72
 opencv-python==4.7.0.72
 opencv-python-headless==4.7.0.72
-psbody-mesh @ git+https://github.com/MPI-IS/mesh.git@v0.4
+psbody-mesh @ git+https://github.com/radekd91/mesh.git@fix/openGLunavailable
 python-speech-features==0.6
 pytorch-lightning==1.4.9
 pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@v0.6.2
@@ -31,3 +31,4 @@ torchfile==0.1.0
 transformers==4.22.2
 trimesh==3.6.43
 wandb==0.10.33
+protobuf==3.13.0
